# DataPreProcessing_and_EDA_Electricity_Weather_Datasets

./: .gitignore  README.md  app.py  data_loader.py  data_preprocessor.py  eda.py  forecasting.py  main.py  merged_data.csv  modeling.py  outlier_handling.py  pyproject.toml
